@@ -7,6 +7,11 @@ Discussion group: http://groups.google.com/group/google-toolbox-for-mac
 Release ?.?.?
 Changes since 1.5.1
 
+- Added GTMNSImage+SearchCache for fetching images based on a variety of
+  specification methods (path, OSTYpe, etc)
+
+- Added GTMFadeTruncatingTextFieldCell, for eliding with a gradient
+
 - Added GTMWindowSheetController for creating and controlling tab-modal sheets.
 
 - Added GTMNSArray+Merge for merging one array into another with or without
